Improve Project lifecycle and fix some retrieval
- Add Retriever nature
- Fix SetVariable
- use join instead of retrieve first node on setAttribute

--- a/plugins/org.pdulvp.retriever.ui/plugin.xml
+++ b/plugins/org.pdulvp.retriever.ui/plugin.xml
@@ -54,5 +54,30 @@
            class="org.pdulvp.retriever.ui.sirius.UISessionFactory">
      </uiSessionFactory>
   </extension>
+  <extension
+        point="org.eclipse.ui.newWizards">
+     <wizard
+           class="org.pdulvp.retriever.ui.NewWizard"
+           id="org.pdulvp.retriever.ui.wizard"
+           name="Retriever Project">
+     </wizard>
+  </extension>
+  <extension
+        id="RetrieverNature"
+        point="org.eclipse.core.resources.natures">
+     <runtime>
+        <run
+              class="org.pdulvp.retriever.ui.RetrieverNature">
+        </run>
+     </runtime>
+  </extension>
+  <extension
+        point="org.eclipse.ui.ide.projectNatureImages">
+     <image
+           icon="icons/obj16/dot.png"
+           id="org.pdulvp.retriever.ui.image1"
+           natureId="org.pdulvp.retriever.ui.RetrieverNature">
+     </image>
+  </extension>
    
 </plugin>
