Add output as json on double click on results #1
Signed-off-by: pdulvp <pdulvp@laposte.net>

--- a/plugins/org.pdulvp.retriever.edit/plugin.properties
+++ b/plugins/org.pdulvp.retriever.edit/plugin.properties
@@ -165,3 +165,5 @@ _UI_URLRetriever_cacheControl_feature = Cache Control
 _UI_URLRetriever_asSemantic_feature = As Semantic
 _UI_SetVariable_log_feature = Log
 _UI_Retriever_dynamic_feature = Dynamic
+_UI_Retriever_dynamicPreconditionExpression_feature = Dynamic Precondition Expression
+_UI_Result_orderedResults_feature = Ordered Results
